Update GroupChat.java